force-app/main/default/objects/PlacementLineItem__c/PlacementLineItem__c.object-meta.xml
<CustomObject>
    <label>Placement Line Item</label>
    <nameField>
        <label>Placement Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Placement Line Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>