force-app/main/default/objects/PlacementLineItem__c/fields/ADJ__c.field-meta.xml
<CustomField>
    <fullName>ADJ__c</fullName>
    <label>ADJ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>