force-app/main/default/objects/PlacementLineItem__c/fields/AdminFee__c.field-meta.xml
<CustomField>
    <fullName>AdminFee__c</fullName>
    <label>Admin Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>