force-app/main/default/objects/PlacementLineItem__c/fields/AdminPct__c.field-meta.xml
<CustomField>
    <fullName>AdminPct__c</fullName>
    <label>Admin(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>