force-app/main/default/objects/PlacementLineItem__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <label>Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>승인</fullName>
            </value>
            <value>
                <fullName>반려</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>