force-app/main/default/objects/PlacementLineItem__c/fields/BizRegion__c.field-meta.xml
<CustomField>
    <fullName>BizRegion__c</fullName>
    <label>Biz Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LK_KR</fullName>
            </value>
            <value>
                <fullName>LK_Re</fullName>
            </value>
            <value>
                <fullName>LK_VN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>