force-app/main/default/objects/PlacementLineItem__c/fields/BUCoBrkgAmt__c.field-meta.xml
<CustomField>
    <fullName>BUCoBrkgAmt__c</fullName>
    <label>BU CoBrkg Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>