force-app/main/default/objects/PlacementLineItem__c/fields/BUCoBrkgSharePct__c.field-meta.xml
<CustomField>
    <fullName>BUCoBrkgSharePct__c</fullName>
    <label>BU CoBrkg Share(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>