force-app/main/default/objects/PlacementLineItem__c/fields/CDIssueDate__c.field-meta.xml
<CustomField>
    <fullName>CDIssueDate__c</fullName>
    <label>C/D Issue Date</label>
    <type>Date</type>
</CustomField>