force-app/main/default/objects/PlacementLineItem__c/fields/CDIssueDate_fm__c.field-meta.xml
<CustomField>
    <fullName>CDIssueDate_fm__c</fullName>
    <formula>RefPlacement__r.CDIssueDate__c</formula>
    <label>C/D Issue Date</label>
    <type>Date</type>
</CustomField>