force-app/main/default/objects/PlacementLineItem__c/fields/CedingCommAmt__c.field-meta.xml
<CustomField>
    <fullName>CedingCommAmt__c</fullName>
    <label>Ceding Comm Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>