force-app/main/default/objects/PlacementLineItem__c/fields/CedingCommPct__c.field-meta.xml
<CustomField>
    <fullName>CedingCommPct__c</fullName>
    <label>RI Comm(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>