force-app/main/default/objects/PlacementLineItem__c/fields/ClmNetRI__c.field-meta.xml
<CustomField>
    <fullName>ClmNetRI__c</fullName>
    <label>Net to RI_Claim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>