force-app/main/default/objects/PlacementLineItem__c/fields/ClmNetToPlacingTPP__c.field-meta.xml
<CustomField>
    <fullName>ClmNetToPlacingTPP__c</fullName>
    <label>Net to Placing TPP_Claim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>