force-app/main/default/objects/PlacementLineItem__c/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance Policy</fullName>
            </value>
            <value>
                <fullName>Placement</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>