force-app/main/default/objects/PlacementLineItem__c/fields/DPPct__c.field-meta.xml
<CustomField>
    <fullName>DPPct__c</fullName>
    <label>DP(%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>