force-app/main/default/objects/PlacementLineItem__c/fields/EffectiveDateEND__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDateEND__c</fullName>
    <label>Effective Date(END)</label>
    <type>Date</type>
</CustomField>