force-app/main/default/objects/PlacementLineItem__c/fields/ENDNo__c.field-meta.xml
<CustomField>
    <fullName>ENDNo__c</fullName>
    <label>END No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>