force-app/main/default/objects/PlacementLineItem__c/fields/ExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRate__c</fullName>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>