force-app/main/default/objects/PlacementLineItem__c/fields/ExpPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>ExpPaymentDate__c</fullName>
    <label>Exp. Payment Date</label>
    <type>Date</type>
</CustomField>