force-app/main/default/objects/PlacementLineItem__c/fields/Facility_UY__c.field-meta.xml
<CustomField>
    <fullName>Facility_UY__c</fullName>
    <label>Facility_UY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_UY</valueSetName>
    </valueSet>
</CustomField>