force-app/main/default/objects/PlacementLineItem__c/fields/FacilityBDXPeriodTo__c.field-meta.xml
<CustomField>
    <fullName>FacilityBDXPeriodTo__c</fullName>
    <label>Facility BDX Period To</label>
    <type>Date</type>
</CustomField>