force-app/main/default/objects/PlacementLineItem__c/fields/FacilityParticipantName__c.field-meta.xml
<CustomField>
    <fullName>FacilityParticipantName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Participant Name</label>
    <referenceTo>COM_FacilityParticipant__c</referenceTo>
    <relationshipLabel>Placement Line Items</relationshipLabel>
    <relationshipName>Placement_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>