force-app/main/default/objects/PlacementLineItem__c/fields/HasProvisionalSettlementLineItem__c.field-meta.xml
<CustomField>
    <fullName>HasProvisionalSettlementLineItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Provisional Settlement LineItem?</label>
    <type>Checkbox</type>
</CustomField>