force-app/main/default/objects/PlacementLineItem__c/fields/IdentificationValue__c.field-meta.xml
<CustomField>
    <fullName>IdentificationValue__c</fullName>
    <label>Identification Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>