force-app/main/default/objects/PlacementLineItem__c/fields/InstalDate__c.field-meta.xml
<CustomField>
    <fullName>InstalDate__c</fullName>
    <label>Install Date</label>
    <type>Date</type>
</CustomField>