force-app/main/default/objects/PlacementLineItem__c/fields/Insured__c.field-meta.xml
<CustomField>
    <fullName>Insured__c</fullName>
    <label>Insured</label>
    <length>255</length>
    <type>Text</type>
</CustomField>