force-app/main/default/objects/PlacementLineItem__c/fields/InsuredRetOriginalInsuredReins__c.field-meta.xml
<CustomField>
    <fullName>InsuredRetOriginalInsuredReins__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Insured</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Placement Line Items</relationshipLabel>
    <relationshipName>PlacementLineItems_InsuredRetOriginal</relationshipName>
    <type>Lookup</type>
</CustomField>