force-app/main/default/objects/PlacementLineItem__c/fields/IsReversed__c.field-meta.xml
<CustomField>
    <fullName>IsReversed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reversed?</label>
    <type>Checkbox</type>
</CustomField>