force-app/main/default/objects/PlacementLineItem__c/fields/Layer__c.field-meta.xml
<CustomField>
    <fullName>Layer__c</fullName>
    <label>(X)Layer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Excess</fullName>
            </value>
            <value>
                <fullName>Umbrella</fullName>
            </value>
            <value>
                <fullName>QS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>