force-app/main/default/objects/PlacementLineItem__c/fields/Layer_lk__c.field-meta.xml
<CustomField>
    <fullName>Layer_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Layer</label>
    <referenceTo>OPP_Layer__c</referenceTo>
    <relationshipLabel>Placement Line Items</relationshipLabel>
    <relationshipName>Placement_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>