force-app/main/default/objects/PlacementLineItem__c/fields/LayerRemarks__c.field-meta.xml
<CustomField>
    <fullName>LayerRemarks__c</fullName>
    <label>Layer Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>