force-app/main/default/objects/PlacementLineItem__c/fields/LayerType__c.field-meta.xml
<CustomField>
    <fullName>LayerType__c</fullName>
    <label>Layer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Excess</fullName>
            </value>
            <value>
                <fullName>Umbrella</fullName>
            </value>
            <value>
                <fullName>QS</fullName>
            </value>
            <value>
                <fullName>XOL</fullName>
            </value>
            <value>
                <fullName>SL</fullName>
            </value>
            <value>
                <fullName>Brkg Adj</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>