force-app/main/default/objects/PlacementLineItem__c/fields/LKBrkgAmt__c.field-meta.xml
<CustomField>
    <fullName>LKBrkgAmt__c</fullName>
    <label>LK Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>