force-app/main/default/objects/PlacementLineItem__c/fields/LKBrkgPctofTotalBrkg__c.field-meta.xml
<CustomField>
    <fullName>LKBrkgPctofTotalBrkg__c</fullName>
    <label>LK Brkg(%) of Total Brkg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>