force-app/main/default/objects/PlacementLineItem__c/fields/LKNetPlacingTPP__c.field-meta.xml
<CustomField>
    <fullName>LKNetPlacingTPP__c</fullName>
    <label>Net to Placing TPP (LK)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>