force-app/main/default/objects/PlacementLineItem__c/fields/LKNetProducingTPP__c.field-meta.xml
<CustomField>
    <fullName>LKNetProducingTPP__c</fullName>
    <label>Net to Producing TPP (LK)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>