force-app/main/default/objects/PlacementLineItem__c/fields/LKPlacingCoBroker__c.field-meta.xml
<CustomField>
    <fullName>LKPlacingCoBroker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LK Placing Co-Broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Placement Line Items (LK Placing Co-Broker)</relationshipLabel>
    <relationshipName>PlacementLineItems_LKPlacingCoBroker</relationshipName>
    <type>Lookup</type>
</CustomField>