force-app/main/default/objects/PlacementLineItem__c/fields/LKPlacingCobrokerContact__c.field-meta.xml
<CustomField>
    <fullName>LKPlacingCobrokerContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LK Placing Co broker Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Placement Line Items</relationshipLabel>
    <relationshipName>PlacementLineItems_LKPlacingCobrokerCont</relationshipName>
    <type>Lookup</type>
</CustomField>