force-app/main/default/objects/PlacementLineItem__c/fields/LKPlacingTPP__c.field-meta.xml
<CustomField>
    <fullName>LKPlacingTPP__c</fullName>
    <label>Placing TPP Brkg (LK)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>