force-app/main/default/objects/PlacementLineItem__c/fields/LKProducingSharingPct__c.field-meta.xml
<CustomField>
    <fullName>LKProducingSharingPct__c</fullName>
    <label>LK Producing Sharing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>