force-app/main/default/objects/PlacementLineItem__c/fields/MarketFacilityName__c.field-meta.xml
<CustomField>
    <fullName>MarketFacilityName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Facility Name</label>
    <referenceTo>COM_Facility__c</referenceTo>
    <relationshipLabel>Placement Line Items</relationshipLabel>
    <relationshipName>Placement_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>