force-app/main/default/objects/PlacementLineItem__c/fields/MarketType__c.field-meta.xml
<CustomField>
    <fullName>MarketType__c</fullName>
    <label>Market Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facility</fullName>
            </value>
            <value>
                <fullName>MGA</fullName>
            </value>
            <value>
                <fullName>Open Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>