force-app/main/default/objects/PlacementLineItem__c/fields/MGAName__c.field-meta.xml
<CustomField>
    <fullName>MGAName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MGA Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Placement Line Items (MGA Name)</relationshipLabel>
    <relationshipName>PlacementLineItems_MGAName</relationshipName>
    <type>Lookup</type>
</CustomField>