force-app/main/default/objects/PlacementLineItem__c/fields/NetBrkgAmt__c.field-meta.xml
<CustomField>
    <fullName>NetBrkgAmt__c</fullName>
    <label>Net Brkg Amt.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>