force-app/main/default/objects/PlacementLineItem__c/fields/NetLKBrkgAmtaftersharing__c.field-meta.xml
<CustomField>
    <fullName>NetLKBrkgAmtaftersharing__c</fullName>
    <label>Net LK Brkg Amt(after sharing)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>