force-app/main/default/objects/PlacementLineItem__c/fields/NetPlacingTPP__c.field-meta.xml
<CustomField>
    <fullName>NetPlacingTPP__c</fullName>
    <label>Net to Placing TPP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>