force-app/main/default/objects/PlacementLineItem__c/fields/NettoLKPrem__c.field-meta.xml
<CustomField>
    <fullName>NettoLKPrem__c</fullName>
    <label>Net to LK Prem.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>