force-app/main/default/objects/PlacementLineItem__c/fields/NettoProducingCoBroker__c.field-meta.xml
<CustomField>
    <fullName>NettoProducingCoBroker__c</fullName>
    <label>Net to Producing Co-Broker</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>