force-app/main/default/objects/PlacementLineItem__c/fields/NettoTPB__c.field-meta.xml
<CustomField>
    <fullName>NettoTPB__c</fullName>
    <label>Net to TPB.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>