force-app/main/default/objects/PlacementLineItem__c/fields/NettoUW__c.field-meta.xml
<CustomField>
    <fullName>NettoUW__c</fullName>
    <label>Net to UW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>