force-app/main/default/objects/PlacementLineItem__c/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <label>Others</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>