force-app/main/default/objects/PlacementLineItem__c/fields/P_B__c.field-meta.xml
<CustomField>
    <fullName>P_B__c</fullName>
    <label>P_B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>