force-app/main/default/objects/PlacementLineItem__c/fields/P_FL__c.field-meta.xml
<CustomField>
    <fullName>P_FL__c</fullName>
    <label>P_FL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>