force-app/main/default/objects/PlacementLineItem__c/fields/P_FL_BUCoBrkg__c.field-meta.xml
<CustomField>
    <fullName>P_FL_BUCoBrkg__c</fullName>
    <label>P_FL(BU CoBrkg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>