force-app/main/default/objects/PlacementLineItem__c/fields/P_FL_TPB__c.field-meta.xml
<CustomField>
    <fullName>P_FL_TPB__c</fullName>
    <label>P_FL(TPB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>