force-app/main/default/objects/PlacementLineItem__c/fields/P_R__c.field-meta.xml
<CustomField>
    <fullName>P_R__c</fullName>
    <label>P_R</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>