force-app/main/default/objects/PlacementLineItem__c/fields/Panel__c.field-meta.xml
<CustomField>
    <fullName>Panel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Panel</label>
    <referenceTo>OPP_Panel__c</referenceTo>
    <relationshipLabel>Placement Line Items</relationshipLabel>
    <relationshipName>PlacementLineItems_Panel</relationshipName>
    <type>Lookup</type>
</CustomField>