force-app/main/default/objects/PlacementLineItem__c/fields/PerformanceInputType__c.field-meta.xml
<CustomField>
    <fullName>PerformanceInputType__c</fullName>
    <label>Performance Input Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provisional</fullName>
            </value>
            <value>
                <fullName>Confirm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>