force-app/main/default/objects/PlacementLineItem__c/fields/PlacingCoBroker__c.field-meta.xml
<CustomField>
    <fullName>PlacingCoBroker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placing Co-Broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Placement Line Items (Placing Co-Broker)</relationshipLabel>
    <relationshipName>PlacementLineItems_PlacingCoBroker</relationshipName>
    <type>Lookup</type>
</CustomField>