force-app/main/default/objects/PlacementLineItem__c/fields/PlacingSharingPct__c.field-meta.xml
<CustomField>
    <fullName>PlacingSharingPct__c</fullName>
    <label>Placing Sharing(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>