force-app/main/default/objects/PlacementLineItem__c/fields/PlacingTPPAdminFeePct__c.field-meta.xml
<CustomField>
    <fullName>PlacingTPPAdminFeePct__c</fullName>
    <label>Placing TPP Admin Fee(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>