force-app/main/default/objects/PlacementLineItem__c/fields/PlacingTPPBrkg__c.field-meta.xml
<CustomField>
    <fullName>PlacingTPPBrkg__c</fullName>
    <label>Placing TPP Brkg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>