force-app/main/default/objects/PlacementLineItem__c/fields/ProducingCoBroker__c.field-meta.xml
<CustomField>
    <fullName>ProducingCoBroker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producing Co-Broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Placement Line Items (Producing Co-Broker)</relationshipLabel>
    <relationshipName>PlacementLineItems_ProducingCoBroker</relationshipName>
    <type>Lookup</type>
</CustomField>