force-app/main/default/objects/PlacementLineItem__c/fields/ProducingSharingPct__c.field-meta.xml
<CustomField>
    <fullName>ProducingSharingPct__c</fullName>
    <label>Producing Sharing(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>