force-app/main/default/objects/PlacementLineItem__c/fields/ProducingTPPAdminFeePct__c.field-meta.xml
<CustomField>
    <fullName>ProducingTPPAdminFeePct__c</fullName>
    <label>Producing TPP Admin Fee(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>