force-app/main/default/objects/PlacementLineItem__c/fields/ProducingTPPBrkg__c.field-meta.xml
<CustomField>
    <fullName>ProducingTPPBrkg__c</fullName>
    <label>Producing TPP Brkg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>